「乗客」を追加

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -50,6 +50,11 @@
     <%= form.text_field :aisle %>
   </p>
 
+ <p>
+    <%= form.label :乗客 %><br>
+    <%= form.text_field :passenger %>
+  </p>
+
   <p>
     <%= form.label :画像 %><br>
     <%= form.file_field :image %>
