--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,7 @@
     <th>尾翼高</th>
     <th>翼幅</th>
     <th>通路</th>
+    <th>乗客</th>
     <!-- <th>画像</th> -->
     <th colspan="6"></th>
   </tr>
@@ -23,6 +24,7 @@
       <td><%= article.height %></td>
       <td><%= article.width %></td>
       <td><%= article.aisle %></td>
+      <td><%= article.passenger %></td>
       <!--v<td><%= article.image %></td> -->
       <td><%= link_to article_path(article) do %>
             <i class="fa fa-info" aria-hidden="true"></i>
