--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to '新規登録', new_article_path %>
 
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>機種</th>
     <th>メーカー</th>
